Fix online session text contrast color not being applied

--- a/Plan/react/dashboard/src/style/default-colors.css
+++ b/Plan/react/dashboard/src/style/default-colors.css
@@ -489,7 +489,7 @@
 
 .bg-sessions {
     background-color: var(--color-data-play-sessions) !important;
-    color: var(--contrast-color-data-play-sessions);
+    color: var(--contrast-color-data-play-sessions) !important;
 }
 
 .bg-sessions-outline {
